test/errors/array_assignment_type_mismatch.sl
# expect: COMPERROR
fixed[] a = [1, 2, 3];
a[0] = "bad";
